# mono-client

./: README.md  license.txt  pyproject.toml  setup.py
mono_client/: client.py
mono_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mono/: client.py
src/mono_client/: client.py
